#448 [feat] comment 개수 return 방식 변경